# anchor-sentinel

./: Cargo.toml  License  README.md  check_output.txt
.github/workflows/: sentinel.yml
src/: lib.rs  main.rs
src/analysis/: cfg.rs  context.rs  mod.rs  taint.rs
src/cli/: mod.rs
src/detectors/: account_usage.rs  arbitrary_cpi.rs  authority_delegation.rs  cpi_reentrancy.rs  error_suppression.rs  integer_overflow.rs  lamports_rounding.rs  loop_overflow.rs  mint_burn.rs  missing_close.rs  missing_owner.rs  missing_signer.rs  mod.rs  oracle_risks.rs  pda_bump.rs  pda_collision.rs  precision_loss.rs  rent_bypass.rs  replay_attack.rs  scope_validation.rs  tainted_flow.rs  token_2022.rs  unchecked_init.rs  unchecked_transfer.rs  unsafe_cpi.rs  unverified_seeds.rs  upgrade_gaps.rs  utils.rs
src/parser/: anchor_parser.rs  instruction_parser.rs  mod.rs
src/poc_generator/: mod.rs  templates.rs
src/report/: finding.rs  formatter.rs  mod.rs
tests/test_contracts/: token_2022_vulnerable.rs  vulnerable_vault.rs
