[package]
name = "anchor-sentinel"
version = "0.1.0"
edition = "2021"
authors = ["Ramprasad"]
description = "A CLI security tool for static analysis of Solana Anchor smart contracts"
license = "GPL-3.0"
repository = "https://github.com/Ramprasad4121/anchor-sentinel"
keywords = ["solana", "anchor", "security", "static-analysis", "smart-contracts"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"

[[bin]]
name = "anchor-sentinel"
path = "src/main.rs"

[dependencies]
# CLI argument parsing with derive macros for declarative command definitions
clap = { version = "4.4", features = ["derive", "color"] }

# Rust AST parsing for static analysis
syn = { version = "2.0", features = ["full", "parsing", "visit", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"

# File system traversal utilities
walkdir = "2.4"
glob = "0.3"
pathdiff = "0.2"

# Serialization for JSON/SARIF output formats
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Template engine for TypeScript POC generation
handlebars = "5.1"

# Terminal output formatting
colored = "2.1"
indicatif = "0.17"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Pattern matching for source code analysis
regex = "1.10"

# Logging infrastructure
log = "0.4"
env_logger = "0.10"

[dev-dependencies]
tempfile = "3.9"
assert_cmd = "2.0"
predicates = "3.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
